--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+  <!-- header menu -->
   <header>
     <div class="container-head">
       <a href="#">
@@ -25,12 +26,13 @@
       </nav>
     </div>
   </header>
+  <!-- End of header menu -->
+  <!-- Content types, button and photo -->
   <div class="container">
     <section class="content-types">
       <div class="c-types-img">
         <figure></figure>
       </div>
-
       <article>
         <h1>Типы контента, которые вы можете публиковать в своем интернет-магазине.</h1>
         <p>Грамотная контентная стратегия для интернет-магазина позволяет значительно увеличить объемы поискового трафика на сайт, за который предпринимателю нет необходимости платить. Это повышает рентабельность бизнеса, ускоряет его развитие и дает преимущество...
@@ -38,8 +40,7 @@
         <a href="#">Подробнее</a>
       </article>
     </section>
-
-
+    <!-- Info sections -->
     <section class="content-effectiveness">
       <article>
         <h2>Эффективность контентной стратегии</h2>
@@ -87,6 +88,7 @@
       </article>
     </section>
   </div>
+  <!-- End of info sections -->
 </body>
 
 </html>
