adding some links

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- header menu -->
   <header>
     <div class="container-head">
-      <a href="#">
+      <a href="https://github.com/Andriy-Fihun/book/tree/test_fihun">
         <img src="images/logo.png" alt="logotype">
       </a>
       <nav>
@@ -37,7 +37,7 @@
         <h1>Типы контента, которые вы можете публиковать в своем интернет-магазине.</h1>
         <p>Грамотная контентная стратегия для интернет-магазина позволяет значительно увеличить объемы поискового трафика на сайт, за который предпринимателю нет необходимости платить. Это повышает рентабельность бизнеса, ускоряет его развитие и дает преимущество...
         </p>
-        <a href="#">Подробнее</a>
+        <a href="https://github.com/Andriy-Fihun/book/tree/test_fihun">Подробнее</a>
       </article>
     </section>
     <!-- Info sections -->
