--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
           его вопрос. И да, не забывайте отвечать на комментарии – коммуникация должна быть двухсторонней</p>
       </article>
     </section>
+    <footer></footer>
   </div>
   <!-- End of info sections -->
 </body>
